Implements a policy of retry when synchronizing the system date. Improve the logging experience in TimeService Add some comments in the property file to help for the configuration.

--- a/nmearecorder/properties/timeservice.properties
+++ b/nmearecorder/properties/timeservice.properties
@@ -1,4 +1,13 @@
-exec=date -s "yyyy/MM/dd HH:mm:ss.SSS+00:00"
+#Number of sentence RMC to receive before stating to be synchronized. The more sentence received, the more accurate it will be.
+#The TimeService store a maximum of 100 time received from the gps. This 100 gps time allow to compute the time reference time of the function 
+#System.nanoTime(). 
 synced=4
+
+#exec is a command line that will be executed in the bash
+exec=date -s "yyyy/MM/dd HH:mm:ss.SSS+00:00"
+
+##Number of second after TimeService starts before synchronizing the System time with the command in the exec parameter
 synchronized=30
+
+#Number of second before re-synchonizing the system time.
 resynchronized=86400
