--- a/nmearecorder/pom.xml
+++ b/nmearecorder/pom.xml
@@ -8,7 +8,6 @@
 	<version>0.0.1-SNAPSHOT</version>
 
 	<build>
-		
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -35,6 +34,12 @@
 	</repositories>
 
 	<dependencies>
+		<dependency>
+		    <groupId>org.jmock</groupId>
+		    <artifactId>jmock</artifactId>
+		    <version>2.6.0</version>
+		    <scope>test</scope>
+		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.influxdb/influxdb-java -->
 		<dependency>
 			<groupId>org.influxdb</groupId>
