--- a/nmearecorder/pom.xml
+++ b/nmearecorder/pom.xml
@@ -48,7 +48,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.jmock</groupId>
-			<artifactId>jmock</artifactId>
+			<artifactId>jmock-junit4</artifactId>
 			<version>2.6.0</version>
 			<scope>test</scope>
 		</dependency>
@@ -61,12 +61,6 @@
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
-		</dependency>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.12</version>
-			<scope>test</scope>
 		</dependency>
 	</dependencies>
 </project>
