Put the Batch options in the influxdb.properties file

--- a/nmearecorder/properties/influxdb.properties
+++ b/nmearecorder/properties/influxdb.properties
@@ -5,3 +5,13 @@ password=root
 dbName=arbutustimeseries
 
 retentionDuration=30d
+
+#
+#Influxdb connector batch options
+#
+#Nb max of action
+nbActions=100
+#buffer limit size (The buffer is used in case of failled actions)
+bufferLimit=500
+#The time to wait at most before flushing in second
+flushPeriodInSecond=5
