--- a/nmearecorder/properties/influxdb.conf
+++ b/nmearecorder/properties/influxdb.conf
@@ -1,7 +1,5 @@
 ### Welcome to the InfluxDB configuration file.
 
-#This InfluxDB configuration file is optimized to be running on a raspberry pi. It reduces the CPU overload observed when using the default configuration.
-
 # The values in this file override the default values used by the system if
 # a config option is not specified. The commented out lines are the configuration
 # field and the default value used. Uncommenting a line and changing the value
@@ -131,7 +129,7 @@ reporting-disabled = true
   # The maximum number of concurrent queries allowed to be executing at one time.  If a query is
   # executed and exceeds this limit, an error is returned to the caller.  This limit can be disabled
   # by setting it to 0.
-  max-concurrent-queries = 3
+  # max-concurrent-queries = 0
 
   # The maximum time a query will is allowed to execute before being killed by the system.  This limit
   # can help prevent run away queries.  Setting the value to 0 disables the limit.
@@ -144,11 +142,11 @@ reporting-disabled = true
   # The maximum number of points a SELECT can process.  A value of 0 will make
   # the maximum point count unlimited.  This will only be checked every second so queries will not
   # be aborted immediately when hitting the limit.
-  # max-select-point = 0
+  #max-select-point = 0
 
   # The maximum number of series a SELECT can run.  A value of 0 will make the maximum series
   # count unlimited.
-  # max-select-series = 0
+  max-select-series = 10
 
   # The maxium number of group by time bucket a SELECT can create.  A value of zero will max the maximum
   # number of buckets unlimited.
@@ -165,7 +163,7 @@ reporting-disabled = true
   # enabled = true
 
   # The interval of time when retention policy enforcement checks run.
-  # check-interval = "30m"
+  check-interval = "4h"
 
 ###
 ### [shard-precreation]
@@ -214,13 +212,13 @@ reporting-disabled = true
 
 [http]
   # Determines whether HTTP endpoint is enabled.
-  enabled = true
+  # enabled = true
 
   # The bind address used by the HTTP service.
-  bind-address = ":8086"
+  # bind-address = ":8086"
 
   # Determines whether user authentication is enabled over HTTP/HTTPS.
-  auth-enabled = false
+  # auth-enabled = false
 
   # The default realm sent back when issuing a basic auth challenge.
   # realm = "InfluxDB"
@@ -260,7 +258,7 @@ reporting-disabled = true
 
   # The maximum number of HTTP connections that may be open at once.  New connections that
   # would exceed this limit are dropped.  Setting this value to 0 disables the limit.
-  max-connection-limit = 5
+  # max-connection-limit = 0
 
   # Enable http service over unix domain socket
   # unix-socket-enabled = false
