--- a/nmearecorder/.classpath
+++ b/nmearecorder/.classpath
@@ -32,5 +32,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="lib/jSSC-2.6.0-Release/jssc.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
