update of the last influxdb.conf before the upgrade of the 1.6

--- a/nmearecorder/properties/influxdb.conf
+++ b/nmearecorder/properties/influxdb.conf
@@ -304,7 +304,7 @@ reporting-disabled = true
   # Determines which level of logs will be emitted. The available levels
   # are error, warn, info, and debug. Logs that are equal to or above the
   # specified level will be emitted.
-  # level = "info"
+  level = "error"
 
   # Suppresses the logo output that is printed when the program is started.
   # The logo is always suppressed if STDOUT is not a TTY.
@@ -480,7 +480,7 @@ reporting-disabled = true
   # batch-pending = 10
 
   # Will flush at least this often even if we haven't hit buffer limit
-  # batch-timeout = "1s"
+  batch-timeout = "5s"
 
   # UDP Read buffer size, 0 means OS default. UDP listener will fail if set above OS max.
   # read-buffer = 0
