Update the influxdb.conf with the new v1.6 properties

--- a/nmearecorder/properties/influxdb.conf
+++ b/nmearecorder/properties/influxdb.conf
@@ -72,7 +72,7 @@ reporting-disabled = true
   # CacheMaxMemorySize is the maximum size a shard's cache can
   # reach before it starts rejecting writes.
   # Valid size suffixes are k, m, or g (case insensitive, 1024 = 1k).
-  # Vaues without a size suffix are in bytes.
+  # Values without a size suffix are in bytes.
   cache-max-memory-size = "124m"
 
   # CacheSnapshotMemorySize is the size at which the engine will
@@ -116,6 +116,11 @@ reporting-disabled = true
   # disabled by setting it to 0.
   # max-values-per-tag = 100000
 
+  # If true, then the mmap advise value MADV_WILLNEED will be provided to the kernel with respect to
+  # TSM files. This setting has been found to be problematic on some kernels, and defaults to off.
+  # It might help users who have slow disks in some cases.
+  # tsm-use-madv-willneed = false
+
 ###
 ### [coordinator]
 ###
@@ -142,7 +147,7 @@ reporting-disabled = true
   # The maximum number of points a SELECT can process.  A value of 0 will make
   # the maximum point count unlimited.  This will only be checked every second so queries will not
   # be aborted immediately when hitting the limit.
-  #max-select-point = 0
+  # max-select-point = 0
 
   # The maximum number of series a SELECT can run.  A value of 0 will make the maximum series
   # count unlimited.
@@ -226,6 +231,9 @@ reporting-disabled = true
   # Determines whether HTTP request logging is enabled.
   log-enabled = false
 
+  # Determines whether the HTTP write request logs should be suppressed when the log is enabled.
+  # suppress-write-log = false
+
   # When HTTP request logging is enabled, this option specifies the path where
   # log entries should be written. If unspecified, the default is to write to stderr, which
   # intermingles HTTP logs with internal InfluxDB logging.
@@ -240,6 +248,10 @@ reporting-disabled = true
   # Determines whether the pprof endpoint is enabled.  This endpoint is used for
   # troubleshooting and monitoring.
   pprof-enabled = false
+
+  # Enables a pprof endpoint that binds to localhost:6060 immediately on startup.
+  # This is only needed to debug startup issues.
+  # debug-pprof-enabled = false
 
   # Determines whether HTTPS is enabled.
   # https-enabled = false
@@ -269,6 +281,18 @@ reporting-disabled = true
   # The maximum size of a client request body, in bytes. Setting this value to 0 disables the limit.
   # max-body-size = 25000000
 
+  # The maximum number of writes processed concurrently.
+  # Setting this to 0 disables the limit.
+  # max-concurrent-write-limit = 0
+
+  # The maximum number of writes queued for processing.
+  # Setting this to 0 disables the limit.
+  # max-enqueued-write-limit = 0
+
+  # The maximum duration for a write to wait in the queue to be processed.
+  # Setting this to 0 or setting max-concurrent-write-limit to 0 disables the limit.
+  # enqueued-write-timeout = 0
+
 
 ###
 ### [ifql]
@@ -281,7 +305,7 @@ reporting-disabled = true
   enabled = false
 
   # Determines whether additional logging is enabled.
-  # log-enabled = true
+  log-enabled = false
 
   # The bind address used by the ifql RPC service.
   # bind-address = ":8082"
@@ -469,6 +493,9 @@ reporting-disabled = true
   # database = "udp"
   # retention-policy = ""
 
+  # InfluxDB precision for timestamps on received points ("" or "n", "u", "ms", "s", "m", "h")
+  # precision = ""
+
   # These next lines control how batching works. You should have this enabled
   # otherwise you could get dropped metrics or poor performance. Batching
   # will buffer points in memory if you have many coming in.
@@ -480,7 +507,7 @@ reporting-disabled = true
   # batch-pending = 10
 
   # Will flush at least this often even if we haven't hit buffer limit
-  batch-timeout = "5s"
+  # batch-timeout = "1s"
 
   # UDP Read buffer size, 0 means OS default. UDP listener will fail if set above OS max.
   # read-buffer = 0
@@ -503,3 +530,27 @@ reporting-disabled = true
 
   # interval for how often continuous queries will be checked if they need to run
   # run-interval = "1s"
+
+###
+### [tls]
+###
+### Global configuration settings for TLS in InfluxDB.
+###
+
+[tls]
+  # Determines the available set of cipher suites. See https://golang.org/pkg/crypto/tls/#pkg-constants
+  # for a list of available ciphers, which depends on the version of Go (use the query
+  # SHOW DIAGNOSTICS to see the version of Go used to build InfluxDB). If not specified, uses
+  # the default settings from Go's crypto/tls package.
+  # ciphers = [
+  #   "TLS_ECDHE_ECDSA_WITH_CHACHA20_POLY1305",
+  #   "TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256",
+  # ]
+
+  # Minimum version of the tls protocol that will be negotiated. If not specified, uses the
+  # default settings from Go's crypto/tls package.
+  # min-version = "tls1.2"
+
+  # Maximum version of the tls protocol that will be negotiated. If not specified, uses the
+  # default settings from Go's crypto/tls package.
+  # max-version = "tls1.2"
