--- a/nmearecorder/pom.xml
+++ b/nmearecorder/pom.xml
@@ -62,5 +62,10 @@
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
 		</dependency>
+		<dependency>
+			<groupId>org.scream3r</groupId>
+			<artifactId>jssc</artifactId>
+			<version>2.8.0</version>
+		</dependency>
 	</dependencies>
 </project>
