--- a/nmearecorder/properties/influxdb.properties
+++ b/nmearecorder/properties/influxdb.properties
@@ -2,6 +2,8 @@ influxdbUrl=http://192.168.43.148:8086
 user=root
 password=root
 
+waitInfluxDbPeriodMaxInSec=181
+
 dbName=arbutustimeseriesdev
 
 retentionDuration=90d
